# notebook-distill

./: .gitignore  LICENSE  README.md  pyproject.toml
notebook_distill/: __init__.py  chunker.py  cli.py  constants.py  extractor.py  formatter.py  html_converter.py  logger.py  metadata.py  utils.py
tests/data/: download.sh
