[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "notebook-distill"
version = "0.2.0"
description = "Distill Jupyter notebooks into clean formats optimized for LLMs"
readme = "README.md"
authors = [
    {name = "Rohan Khandekar", email = "rohan1198@gmail.com"}
]
license = "MIT"
requires-python = ">=3.7"
dependencies = [
    "nbformat>=5.0.0",
    "nbclient>=0.5.0",
    "tiktoken>=0.5.0",
    "nltk>=3.8.1",
    "beautifulsoup4>=4.9.0",  # For better HTML parsing
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Markup",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "black>=23.1.0",
    "isort>=5.12.0",
]

[project.scripts]
nbdistill = "notebook_distill.cli:main"

[tool.setuptools]
packages = ["notebook_distill"]

[tool.black]
line-length = 100
target-version = ["py37"]

[tool.isort]
profile = "black"
line_length = 100
